# flux-compose

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.org  TODO.org  autogen.sh  bootstrap.sh  configure.ac  init.scm  manifest.scm
.github/workflows/: compile.yaml  lsp-setup.yaml  makefile.yml
cmake/: compiler.cmake
examples/: basic-gfx.fxs  basic-gfx.scm  ideas.flx  init.fxs  thumbnail.msc
lib/: CMakeLists.txt  Makefile  file.c  flux-internal.h  flux.h  font.c  graphics.c  lib.c  log.c  mem.c  scene.c  script.c  texture.c  vector.c
lib/mesche/: CMakeLists.txt  LICENSE  README.org  compiler.c  object.c  vm.c
lib/mesche/include/: mesche.h
lib/mesche/modules/mesche/: fs.msc
lib/mesche/samples/: closures.msc  conditionals.msc  define.msc  functions.msc  keyword-args.msc  lists.msc  locals.msc  modules.msc
lib/mesche/src/: chunk.c  chunk.h  compiler.c  compiler.h  disasm.c  disasm.h  eval.c  eval.h  fs.c  fs.h  list.c  list.h  mem.c  mem.h  module.c  module.h  object.c  object.h  op.h  repl.c  repl.h  scanner.c  scanner.h  string.c  string.h  table.c  table.h  util.h  value.c  value.h  vm.c  vm.h
src/: Makefile.am
src/core/: CMakeLists.txt  Makefile.am  app.h  lib.c  main.c  repl.c
src/modules/flux/: graphics.msc  graphics.scm
test/: CMakeLists.txt  test-lang.c  test-main.c  test-vector.c  test.h
tools/: flux-compose.el
